# watertight

./: .gitignore  CMakeLists.txt
src/: parse_stl.cpp  parse_stl.h  triangular_mesh.cpp  triangular_mesh.h
test/: triangular_mesh_tests.cpp
